objects/014-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-webserver
  labels:
    name: nginx-webserver
spec:
  ingressClassName: ingress-nginx-class
  rules:
  - host: nginx.namutest.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-webserver
            port: 
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-webserver
spec:
  type: ClusterIP
  selector:
    app: nginx-webserver
  ports:
  - port: 80
    targetPort: 80
